# OncoSplice

./: README.rst  pyproject.toml
oncosplice/: Gene.py  Protein.py  SpliceSite.py  __init__.py  mature_mRNA.py  oncosplice.py  oncosplice_score.py  pre_mRNA.py  protein_scoring_utils.py  run_oncosplice.py  setup.py  spliceai_utils.py  titer_utils.py  utils.py  variant_utils.py
oncosplice/resources/: .gitattributes  conservation.pkl  setup.py  tis_regressor_model.joblib
tests/: test_oncosplice.py
trash/: Protein.py  mature_mRNA.py  pre_mRNA.py
