[tool.poetry]
name = "OncoSplice"
version = "1.0.0"
description = ""
authors = ["Nico Lynn <nicolasalynn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
#gtfparse = "1.3.0"
#keras = "2.4.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
datasetup = 'oncosplice.setup:main'

# poetry run datasetup --arg1 value1 --arg2 value2