[tool.poetry]
name = "OncoSplice"
version = "1.1.0"
description = ""
authors = ["Nico Lynn <nicolasalynn@gmail.com>"]

[tool.poetry.dependencies]
#python = "3.9.15"
#biopython = "1.81"
#gtfparse = "1.3.0"
#networkx = "3.1"
#spliceai = "1.3.1"
#numpy = "1.22.3"
#pandas = "1.4.2"
#keras = "2.4.3"
#tensorflow = "2.4.1"
#tqdm = "4.66.1"
#viennarna = "2.4.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
datasetup = 'oncosplice.setup:main'

# poetry run datasetup -c /Users/nl/Documents/phd/data/Rate4Site/conservation.pkl -b /Users/nl/Documents/phd/data/oncosplice_database